--- a/src/component/getcategorydata/GetCat.moduls.css
+++ b/src/component/getcategorydata/GetCat.moduls.css
@@ -23,19 +23,18 @@
     scrollbar-width: none;
 }
 .table{
-    width: 205px;
-    height: 25px;
-    padding: 10px;
+    width: 120px;
+    height: 40px;
     border: 0;
     border-bottom: 1px solid black;
-    display: flex-box;
+    display: flex;
     flex-direction: row;
     text-align: center;
+    justify-content: center;
 }
 .table1{
-    width: 205px;
-    height: 60px;
-    padding: 10px;
+    width: 120px;
+    height: 40px;
     border:0;
     border-bottom: 1px solid #b6b6b8;
     display: flex;
