--- a/src/component/product/ProductTable.module.css
+++ b/src/component/product/ProductTable.module.css
@@ -20,30 +20,28 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-   
 }
-
 .wraptable{
     width:100%;
     height: 100%;
+    margin-top: 5px;
     overflow: scroll;
 }
 .wraptable ::-webkit-scrollbar{
     display: none;
 }
 .table{
-    width: 200px;
-    height: 35px;
-    padding: 10px;
-    border: 1px solid black;
-    display: flex-box;
-    flex-direction: row;
-    text-align: center;
+    width: 120px;
+    height: 40px;
+    border-bottom: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 .table1{
-    width: 200px;
-    height: 70px;
-    padding: 10px;
+    width: 120px;
+    height: 40px;
     border: none;
     border-bottom: 1px solid #9ac1f5;
     display: flex;
@@ -52,9 +50,17 @@
     align-items: center;
     overflow: hidden;
 }
-.table1 span{  
-    text-align: center;
-    font-size: 15px;
+.table1 p{ 
+    text-align: center; 
+    font-size: 10px;
     font-weight: 400;
     
+}
+.table p{
+    text-align: center;
+}
+.table1 img {
+    text-align: center;
+    width: 90px;
+    height: 25px;
 }
