--- a/src/component/Invoice/Invoice.module.css
+++ b/src/component/Invoice/Invoice.module.css
@@ -1,14 +1,99 @@
+
+*{
+    margin:0px;
+    padding:0px;
+}
 .container{
-    width: 595px;
-    height: 842px;
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items:center;
+    margin-top: 20px;
+    width: 8.3in;
+    height: 14in;
     background-color:#fff;
     box-shadow: 2px 3px 3px 3px #c5c7c5;
 }
 .chaild_container{
     width:90%;
-    height:80%;
+    height:95%;
     display: flex;
+    flex-direction:column;     
+}
+.logo_container{
+    display:flex;
+    flex-direction: row;
+}
+.shopdetails{
+    display:flex;
+    flex-direction: row;
+    justify-content:space-between;
+    margin-top:25px;
+}
+.InvoiceDetails{ 
+    display:flex;
     flex-direction: column;
+    justify-content:flex-end;
+    align-items:flex-end;
+    width:100%;
+    margin-top:30px;
+}
+.Bill_container{
+    display: flex;
+    flex-direction:row;
+
+}
+.bill_details{
+    width:50%
+}
+.tablecontainer{
+    margin-top:15px;
+}
+table{
+    border:1px solid black;
+  }
+.rowheader td{
+    font-size:12px;
+}
+.rowitem td{
+    font-size: 12px;
+    font-weight:600;
+}
+
+.footer_contaier{
+    position: absolute;
+
+}
+
+.footer{   
+    display:flex;
+    flex-direction:column;
     justify-content:center;
-    align-items: center;
+    align-items:center;
+    width:100%;
+}
+.btnpdf{
+    background-color:#22DD34;
+    border:none;
+    color:#fff;
+    width:150px;
+    height:30px;
+    margin-top:10px;
+    position:relative;
+    left:20%
+}
+.btnpdf:hover{
+    background-color: #DD22CB;
+}
+.backbtn{
+    background-color:#C0EA15;
+    border:none;
+    color:#fff;
+    width:80px;
+    height:30px;
+    margin-top:10px;
+    margin-left:10px;
+}
+.backbtn:hover{
+    background-color:#3F15EA;
 }
