--- a/src/component/bulkUploadProduct/BulkUploadProduct.module.css
+++ b/src/component/bulkUploadProduct/BulkUploadProduct.module.css
@@ -1,6 +1,13 @@
-.container{
+.main_container{
   width: 100%;
   height: 100%;
+  display:flex;
+  flex-direction:row;
+  justify-content: space-around;
+  align-items: center;
+}
+.container{
+  
   display: flex;
   flex-direction: column;
   justify-content: center;
