--- a/src/component/bulkUploadProduct/BulkUploadProduct.module.css
+++ b/src/component/bulkUploadProduct/BulkUploadProduct.module.css
@@ -18,7 +18,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 400px;
+    width: 250px;
     height: 200px;
     background-color: #fff;
     box-shadow: 2px 3px 3px 3px #c5c7c5;
@@ -55,4 +55,14 @@
 }
 .submitbtn:hover{
     background-color: #CE9031;
+}
+.closebtn{
+  width:50px;
+  height:30px;
+  color:#fff;
+  border:none;
+  background-color: #1ECBE1;
+}
+.closebtn:hover{
+  background-color:#E1341E;
 }
