--- a/src/component/product/ProductTable.module.css
+++ b/src/component/product/ProductTable.module.css
@@ -4,11 +4,22 @@
     overflow:-moz-hidden-unscrollable;
 }
 .butoonWrapper{
-    width: 500px;
+    width: 90%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+}
+.paginationbtn{
+    width: auto;
+    background-color: #108EEF;
+    padding: 5px;
+    border: none;
+    color: azure;
+    border-radius: 5px;
+}
+.paginationbtn:hover{
+    background-color: #E1341E;
 }
 .textinput{
     width: 270px;
@@ -22,14 +33,13 @@
     align-items: center;
 }
 .wraptable{
-    width:100%;
-    height: 100%;
     margin-top: 5px;
-    overflow: scroll;
+    width: 100%;
 }
 .wraptable ::-webkit-scrollbar{
     display: none;
 }
+
 .table{
     width: 120px;
     height: 40px;
