--- a/src/component/dashboardimage/AddDashBoardImage.module.css
+++ b/src/component/dashboardimage/AddDashBoardImage.module.css
@@ -1,8 +1,6 @@
 .container{
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
 }
 .inputfile{
     display: none;
@@ -23,8 +21,8 @@
     background-color: rgb(8, 98, 114);
 }
 .button_container{
-    width: 150px;
-    height: 40px;
+    width: 120px;
+    height: 30px;
     font-size: 18px;
     color: floralwhite;
     text-transform: uppercase;
@@ -51,4 +49,22 @@
 .bckbtn_container{
     display: flex;
     flex-direction: row;
+}
+.formcontainer{
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+}
+.backbutton{
+    width:100px;
+    height:32px;
+    text-align: center;
+    font-size:16px;
+    background-color:#15A6EA;
+    border-radius:10px;
+    color: #fff;
+    border: none;
+}
+.backbutton:hover{
+    background-color: #EA5915;
 }
