--- a/src/component/subcategory/AddSubCat.module.css
+++ b/src/component/subcategory/AddSubCat.module.css
@@ -1,8 +1,6 @@
 .container{
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
 }
 .inputfile{
     display: none;
@@ -18,13 +16,14 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     border-radius: 10px;
+    margin-top: 10px;
 }
 .filelable:hover{
     background-color: rgb(8, 98, 114);
 }
 .button_container{
-    width: 150px;
-    height: 40px;
+    width: 120px;
+    height: 30px;
     font-size: 18px;
     color: floralwhite;
     text-transform: uppercase;
@@ -71,5 +70,23 @@
     align-items: center;
     width: 100%;
     height: 40px;
-    margin-left: 10px;
+}
+.formcontainer{
+    margin-top: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.backbutton{
+    width:100px;
+    height:32px;
+    text-align: center;
+    font-size:16px;
+    background-color:#15A6EA;
+    border-radius:10px;
+    color: #fff;
+    border: none;
+}
+.backbutton:hover{
+    background-color: #EA5915;
 }
