--- a/src/component/user/User.module.css
+++ b/src/component/user/User.module.css
@@ -11,8 +11,9 @@
     justify-content: space-between;
 }
 .textinput{
-    width: 270px;
+    width: 250px;
     height:30px;
+    border-radius: 5px;
     padding-left: 10px;
 }
 .tableContainer{   
@@ -64,10 +65,11 @@
     background-color:yellow;
 }
 .SearchContainer{
-    width: 100%;
-    height: 60px;
+    width: 70%;
+    height: 50px;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     align-items: center;
 }
 .pagination{
@@ -77,7 +79,9 @@
 .paginationbtn{
     width: auto;
     height: 30px;
+    padding: 5px;
     background-color: #9ac1f5;
+    border-radius: 5px;
     color: white;
     border: 0;
     margin-left: 10px;
