--- a/src/shared-component/inputtext/InputText-Css.css
+++ b/src/shared-component/inputtext/InputText-Css.css
@@ -1,15 +1,15 @@
 
 
 .textinput{
-    width: 70%;
-    height: 20px;
-    padding: 10px;
+    width: 40%;
+    height: 30px;
     font-size: 18px;
     outline: none;
     background-color: #fff;
     color: black;
     margin-top: 0px;
     margin-bottom: 8px;
-    border-radius: 10px;
-    border-color: cornflowerblue;
+    border-radius: 5px;
+    margin-left: 0px;
+    padding-left: 10px;
 }
