--- a/src/component/dashboardimage/AddDashBoardImage.module.css
+++ b/src/component/dashboardimage/AddDashBoardImage.module.css
@@ -27,14 +27,14 @@
     color: floralwhite;
     text-transform: uppercase;
     letter-spacing: 1px;
-    background-color: rgb(33, 155, 29);
-    border-radius: 10px;
+    background-color: #15A6EA;
+    border-radius: 7px;
     margin-top: 20px;
     outline: none;
     border:none
 }
 .button_container:hover{
-    background-color: rgb(7, 131, 7);
+    background-color: #EA5915;
 }
 .imgsrc{
     width: 100px;
