--- a/src/component/paymentdetails/PaymentDetail.module.css
+++ b/src/component/paymentdetails/PaymentDetail.module.css
@@ -4,14 +4,17 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+
 }
 
 .searchtxt{
-    width: 250px;
+    width: 220px;
     height: 30px;
     padding-left: 10px;
     font-size: 15px;
     border-color: rgb(110, 110, 251);
     outline: none;
+    border-radius: 5px;
+    margin-right: 5px;
 }
 
