--- a/src/component/product/ProductTable.module.css
+++ b/src/component/product/ProductTable.module.css
@@ -74,3 +74,17 @@
     width: 90px;
     height: 25px;
 }
+.backbutton{
+    width:80px;
+    height:32px;
+    text-align: center;
+    font-size:16px;
+    background-color:#15A6EA;
+    border-radius:5px;
+    color: #fff;
+    border: none;
+    margin-left:10px;
+}
+.backbutton:hover{
+    background-color: #EA5915;
+}
