--- a/src/component/product/Product_Css.css
+++ b/src/component/product/Product_Css.css
@@ -5,15 +5,21 @@
     margin-left: 10px;
 }
 .textinput-container{
+    display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    height: 95%;
 }
-
+.bulletContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
 .textinput-container p{
     font-size: 16px;
-    margin-bottom: 4px;
-    margin-left: 10px;
+    margin-bottom: 2px;
+    color:#4F96B0;
+    margin-top: 5px;
 }
 .buttonConatiner{
     width: 53%;
@@ -23,16 +29,20 @@
 .button{
     width:130px;
     height: 40px;
-    padding: 10px;
     text-align: center;
-    background-color: rgb(54, 51, 51);
+    background-color: #1D6DE2;
     color: whitesmoke;
     cursor: pointer;
-    font-size: 18px;
+    font-size:18px;
     font-weight: bold;
-    border-radius: 10px;
+    border-radius: 5px;
+    border: none;
+    margin-top: 5px;
 }
-
+.button:hover{
+    background-color: #E2921D;
+    font-size: 20px;
+}
 input#file{
     display: none;
 }
@@ -42,15 +52,15 @@ input#file{
     text-transform: uppercase;
 }
 .inputfile + label {
-    width: 150px;
-    padding: 10px;
+    width:130px;
+    height: 30px;
     font-size: 1.25em;
-    font-weight: 700;
+    font-weight: 500;
     color: white;
     background-color: black;
     display: inline-block;
     text-align: center;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .inputfile:focus + label,
@@ -87,4 +97,25 @@ input#file{
     display: flex;
     flex-direction: row;
     align-items: center;
+}
+.backbutton{
+    width:100px;
+    height:32px;
+    text-align: center;
+    font-size:16px;
+    background-color:#15A6EA;
+    border-radius:10px;
+    color: #fff;
+    border: none;
+}
+.backbutton:hover{
+    background-color: #EA5915;
+}
+.textArea{
+    width:50%;
+    height: 100px;
+    font-size: 16px;
+    outline: none;
+    border-radius: 5px;
+    padding-left: 10px;
 }
