--- a/src/component/subcategory/GetSubCatData.module.css
+++ b/src/component/subcategory/GetSubCatData.module.css
@@ -44,3 +44,18 @@ span{
     font-size: 10px;
     font-weight: 400;   
 }
+
+.backbutton{
+    width:80px;
+    height:32px;
+    text-align: center;
+    font-size:16px;
+    background-color:#15A6EA;
+    border-radius:5px;
+    color: #fff;
+    border: none;
+    margin-left:10px;
+}
+.backbutton:hover{
+    background-color: #EA5915;
+}
