--- a/src/component/user/User.module.css
+++ b/src/component/user/User.module.css
@@ -49,8 +49,7 @@
 .table1 p{ 
     text-align: center; 
     font-size: 10px;
-    font-weight: 400;
-    
+    font-weight: 400px;
 }
 .table p{
     text-align: center;
