--- a/src/component/product/ProductTable.module.css
+++ b/src/component/product/ProductTable.module.css
@@ -9,6 +9,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    margin-top:10px;
 }
 .paginationbtn{
     width: auto;
@@ -87,4 +88,11 @@
 }
 .backbutton:hover{
     background-color: #EA5915;
+}
+.loadingStyle{
+    width: 100%;
+    height: 60vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
