--- a/src/component/deliveryCharges/DeliveryCharges.module.css
+++ b/src/component/deliveryCharges/DeliveryCharges.module.css
@@ -55,7 +55,7 @@
     background-color: #DC5923;
 }
 .ptext{
-    width: 53%;
+    width: 63%;
     margin-bottom:5px;
 }
 .closebtn{
@@ -72,4 +72,9 @@
 }
 .closebtn:hover{
     background-color:#C64239;
+}
+.textarea{
+    width: 58%;
+    height: 50px;
+    padding-left: 5px;
 }
