--- a/src/component/product/Product_Css.css
+++ b/src/component/product/Product_Css.css
@@ -76,18 +76,15 @@ input#file{
     flex-direction:row;   
 }
 .imgsrc{
-    width: 50px;
-    height: 70px;
+    width:90%;
+    height:80px;
 }
 .imageblock
 {
     display: flex;
     flex-direction:row; 
     width: 100px;
-    height: 70px;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid rgb(100, 218, 32);
+    height: 80px;
     margin-right: 5px ;
     margin-bottom: 10px ;
 }
@@ -121,4 +118,18 @@ input#file{
 }
 .loading{
     text-align: center;
+}
+
+.crossStyle{
+  width:fit-content;
+  height: fit-content;
+  background-color: #1486EB;
+  padding: 5px;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  color:white;
+}
+.crossStyle:hover{
+    background-color: #EB7914;
 }
